# profunctor

./: README.md  profunctor.opam
src/: dune  profunctor.ml  profunctor_intf.ml
