opam-version: "2.0"
version: "v0.15.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/profunctor"
bug-reports: "https://github.com/janestreet/profunctor/issues"
dev-repo: "git+https://github.com/janestreet/profunctor.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/profunctor/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"          {>= "4.11.0"}
  "base"           {>= "v0.15" & < "v0.16"}
  "ppx_jane"       {>= "v0.15" & < "v0.16"}
  "record_builder" {>= "v0.15" & < "v0.16"}
  "dune"           {>= "2.0.0"}
]
synopsis: "A library providing a signature for simple profunctors and traversal of a record"
description: "
This is a very small library which provides a signature for profunctor types
and operations which can be used to traverse a record with them based on
record_builder and the =ppx_fields= syntax extension.
"
