opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/profunctor"
bug-reports: "https://github.com/janestreet/profunctor/issues"
dev-repo: "git+https://github.com/janestreet/profunctor.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/profunctor/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_jane"
  "record_builder"
  "dune"           {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library providing a signature for simple profunctors and traversal of a record"
description: "
This is a very small library which provides a signature for profunctor types
and operations which can be used to traverse a record with them based on
record_builder and the =ppx_fields= syntax extension.
"
